Plugin/Importer/AlembicImporter.h

    struct abcV2
    {
        float x, y;

        abcV2() {}
        abcV2(float _x, float _y) : x(_x), y(_y) {}
    };


    struct abcV3
    {
        float x, y, z;

        abcV3() {}
        abcV3(float _x, float _y, float _z) : x(_x), y(_y), z(_z) {}
    };


    struct abcV4
    {
        float x, y, z, w;

        abcV4() {}
        abcV4(float _x, float _y, float _z, float _w) : x(_x), y(_y), w(_w) {}
    };


    struct abcSampleSelector
    {
        uint64_t m_requestedIndex;
        double m_requestedTime;
        int m_requestedTimeIndexType;
    };


struct  aiConfig;

struct  aiCameraData;

struct  aiMeshSummary;

struct  aiMeshSampleSummary;

struct  aiPolyMeshData;

struct  aiSubmeshSummary;

struct  aiSubmeshData;


class   aiContext;

class   aiObject;
    // force make castable
    typedef void aiSchemaBase;

    typedef void aiSampleBase;
class   aiCamera;   // : aiSchemaBase
class   aiPolyMesh; // : aiSchemaBase
class   aiPoints;   // : aiSchemaBase


struct  aiPolyMeshData;

struct  aiPointsData;


enum aiNormalsMode
{
    NM_ReadFromFile = 0,
    NM_ComputeIfMissing,
    NM_AlwaysCompute,
    NM_Ignore
};


enum aiTangentsMode
{
    TM_None = 0,
    TM_Smooth,
    TM_Split
};


enum aiTimeSamplingType
{
    aiTimeSamplingType_Uniform,
    aiTimeSamplingType_Cyclic,
    aiTimeSamplingType_Acyclic,
};


enum aiPropertyType
{
    aiPropertyType_Unknown,

    // scalar types
    aiPropertyType_Bool,
    aiPropertyType_Int,
    aiPropertyType_UInt,
    aiPropertyType_Float,
    aiPropertyType_Float2,
    aiPropertyType_Float3,
    aiPropertyType_Float4,
    aiPropertyType_Float4x4,

    // array types
    aiPropertyType_BoolArray,
    aiPropertyType_IntArray,
    aiPropertyType_UIntArray,
    aiPropertyType_FloatArray,
    aiPropertyType_Float2Array,
    aiPropertyType_Float3Array,
    aiPropertyType_Float4Array,
    aiPropertyType_Float4x4Array,

    aiPropertyType_ScalarTypeBegin  = aiPropertyType_Bool,
    aiPropertyType_ScalarTypeEnd    = aiPropertyType_Float4x4,

    aiPropertyType_ArrayTypeBegin   = aiPropertyType_BoolArray,
    aiPropertyType_ArrayTypeEnd     = aiPropertyType_Float4x4Array,
};


struct aiConfig
{
    bool swapHandedness;
    bool swapFaceWinding;
    aiNormalsMode normalsMode;
    aiTangentsMode tangentsMode;
    bool cacheTangentsSplits;
    float aspectRatio;
    bool forceUpdate;
    bool useThreads;
    int32_t cacheSamples;
    bool submeshPerUVTile;

    inline aiConfig()
        : swapHandedness(false)
        , swapFaceWinding(false)
        , normalsMode(NM_ComputeIfMissing)
        , tangentsMode(TM_None)
        , cacheTangentsSplits(true)
        , aspectRatio(-1.0f)
        , forceUpdate(false)
        , useThreads(true)
        , cacheSamples(0)
        , submeshPerUVTile(true)
    {
    }

    aiConfig(const aiConfig&) = default;
    aiConfig& operator=(const aiConfig&) = default;
};


struct aiCameraData
{
    float nearClippingPlane;
    float farClippingPlane;
    float fieldOfView;      // in degree. vertical one
    float aspectRatio;

    float focusDistance;    // in cm
    float focalLength;      // in mm
    float aperture;         // in cm. vertical one

    inline aiCameraData()
        : nearClippingPlane(0.3f)
        , farClippingPlane(1000.0f)
        , fieldOfView(60.0f)
        , aspectRatio(16.0f / 9.0f)
        , focusDistance(5.0f)
        , focalLength(0.0f)
        , aperture(2.4f)
    {
    }

    aiCameraData(const aiCameraData&) = default;
    aiCameraData& operator=(const aiCameraData&) = default;
};


struct aiMeshSummary
{
    int32_t topologyVariance;
    int32_t peakVertexCount;
    int32_t peakIndexCount;
    int32_t peakTriangulatedIndexCount;
    int32_t peakSubmeshCount;

    inline aiMeshSummary()
        : topologyVariance(0)
        , peakVertexCount(0)
        , peakIndexCount(0)
        , peakTriangulatedIndexCount(0)
        , peakSubmeshCount(0)
    {
    }

    aiMeshSummary(const aiMeshSummary&) = default;
    aiMeshSummary& operator=(const aiMeshSummary&) = default;
};


struct aiMeshSampleSummary
{
    int32_t splitCount;
    bool hasNormals;
    bool hasUVs;
    bool hasTangents;

    inline aiMeshSampleSummary()
        : splitCount(0)
        , hasNormals(false)
        , hasUVs(false)
        , hasTangents(false)
    {
    }

    aiMeshSampleSummary(const aiMeshSampleSummary&) = default;
    aiMeshSampleSummary& operator=(const aiMeshSampleSummary&) = default;
};


struct aiPolyMeshData
{
    abcV3 *positions;
    abcV3 *velocities;
    abcV3 *normals;
    abcV2 *uvs;
    abcV4 *tangents;

    int *indices;
    int *normalIndices;
    int *uvIndices;
    int *faces;

    int positionCount;
    int normalCount;
    int uvCount;

    int indexCount;
    int normalIndexCount;
    int uvIndexCount;
    int faceCount;

    int triangulatedIndexCount;

    abcV3 center;
    abcV3 size;

    inline aiPolyMeshData()
        : positions(nullptr), velocities(nullptr), normals(nullptr), uvs(nullptr), tangents(nullptr)
        , indices(nullptr), normalIndices(nullptr), uvIndices(nullptr), faces(nullptr)
        , positionCount(0), normalCount(0), uvCount(0)
        , indexCount(0), normalIndexCount(0), uvIndexCount(0), faceCount(0)
        , triangulatedIndexCount(0)
        , center(0.0f, 0.0f, 0.0f) , size(0.0f, 0.0f, 0.0f)
    {
    }

    aiPolyMeshData(const aiPolyMeshData&) = default;
    aiPolyMeshData& operator=(const aiPolyMeshData&) = default;
};


struct aiSubmeshSummary
{
    int32_t index;
    int32_t splitIndex;
    int32_t splitSubmeshIndex;
    int32_t facesetIndex;
    int32_t triangleCount;

    inline aiSubmeshSummary()
        : index(0)
        , splitIndex(0)
        , splitSubmeshIndex(0)
        , facesetIndex(-1)
        , triangleCount(0)
    {
    }

    aiSubmeshSummary(const aiSubmeshSummary&) = default;
    aiSubmeshSummary& operator=(const aiSubmeshSummary&) = default;
};


struct aiSubmeshData
{
    int32_t *indices;

    inline aiSubmeshData()
        : indices(0)
    {
    }

    aiSubmeshData(const aiSubmeshData&) = default;
    aiSubmeshData& operator=(const aiSubmeshData&) = default;
};



struct aiPointsSummary
{
    bool hasVelocity;
    bool positionIsConstant;
    bool idIsConstant;
    int32_t peakCount;
    uint64_t minID;
    uint64_t maxID;
    abcV3 boundsCenter;
    abcV3 boundsExtents;

    aiPointsSummary()
        : hasVelocity(false)
        , positionIsConstant(false), idIsConstant(false)
        , peakCount(0)
        , minID(0), maxID(0)
        , boundsCenter(0.0f, 0.0f, 0.0f), boundsExtents(0.0f, 0.0f, 0.0f)
    {}
};


struct aiPointsData
{
    abcV3       *positions;
    abcV3       *velocities;
    uint64_t    *ids;
    int32_t     count;

    abcV3       center;
    abcV3       size;

    inline aiPointsData()
        : positions(nullptr)
        , velocities(nullptr)
        , ids(nullptr)
        , count(0)
        , center(0.0f, 0.0f, 0.0f)
        , size(0.0f, 0.0f, 0.0f)
    {
    }

    aiPointsData(const aiPointsData&) = default;
    aiPointsData& operator=(const aiPointsData&) = default;
};


struct aiPropertyData
{
    void *data;
    int size;
    aiPropertyType type;

    aiPropertyData() : data(nullptr), size(0), type(aiPropertyType_Unknown) {}
    aiPropertyData(aiPropertyType t, void *d, int s) : data(d), size(s), type(t) {}
};

aiCLinkage aiExport aiSampleBase*   aiSchemaUpdateSample(aiSchemaBase* schema, const abcSampleSelector *ss);

aiCLinkage aiExport aiSampleBase*   aiSchemaGetSample(aiSchemaBase* schema, const abcSampleSelector *ss);