AlembicImporter/Assets/com.unity.alembic/Alembic/Runtime/Scripts/Importer/AbcAPI.cs

using System;
using System.Runtime.InteropServices;
using UnityEngine;

namespace UTJ.Alembic
{
    public enum aiAspectRatioMode
    {
        CurrentResolution,
        DefaultResolution,
        CameraAperture
    };

    public enum aiNormalsMode
    {
        Import,
        CalculateIfMissing,
        AlwaysCalculate,
        None
    }

    public enum aiTangentsMode
    {
        None,
        Calculate,
    }

    public enum aiTopologyVariance
    {
        Constant,
        Homogeneous, // vertices are variant, topology is constant
        Heterogeneous, // both vertices and topology are variant
    }

    public enum aiTopology
    {
        Points,
        Lines,
        Triangles,
        Quads,
    };

    public enum aiTimeSamplingType
    {
        Uniform,
        Cyclic,
        Acyclic,
    };

    public enum aiPropertyType
    {
        Unknown,

        // scalar types
        Bool,
        Int,
        UInt,
        Float,
        Float2,
        Float3,
        Float4,
        Float4x4,

        // array types
        BoolArray,
        IntArray,
        UIntArray,
        FloatArray,
        Float2Array,
        Float3Array,
        Float4Array,
        Float4x4Array,

        ScalarTypeBegin = Bool,
        ScalarTypeEnd = Float4x4,

        ArrayTypeBegin = BoolArray,
        ArrayTypeEnd = Float4x4Array,
    };

    public struct aiConfig
    {
        public aiNormalsMode normalsMode;
        public aiTangentsMode tangentsMode;
        public float scaleFactor;
        public float aspectRatio;
        public float vertexMotionScale;
        public int splitUnit;
        public Bool swapHandedness;
        public Bool flipFaces;
        public Bool interpolateSamples;
        public Bool turnQuadEdges;
        public Bool asyncLoad;
        public Bool importPointPolygon;
        public Bool importLinePolygon;
        public Bool importTrianglePolygon;

        public void SetDefaults()
        {
            normalsMode = aiNormalsMode.CalculateIfMissing;
            tangentsMode = aiTangentsMode.None;
            scaleFactor = 0.01f;
            aspectRatio = -1.0f;
            vertexMotionScale = 1.0f;
#if UNITY_2017_3_OR_NEWER
            splitUnit = 0x7fffffff;
#else
            splitUnit = 65000;
#endif
            swapHandedness = true;
            flipFaces = false;
            interpolateSamples = true;
            turnQuadEdges = false;
            asyncLoad = true;
            importPointPolygon = true;
            importLinePolygon = true;
            importTrianglePolygon = true;
        }
    }

    public struct aiSampleSelector
    {
        public ulong requestedIndex;
        public double requestedTime;
        public int requestedTimeIndexType;
    }

    public struct aiMeshSummary
    {
        public aiTopologyVariance topologyVariance;
        public Bool hasVelocities;
        public Bool hasNormals;
        public Bool hasTangents;
        public Bool hasUV0;
        public Bool hasUV1;
        public Bool hasColors;
        public Bool constantPoints;
        public Bool constantVelocities;
        public Bool constantNormals;
        public Bool constantTangents;
        public Bool constantUV0;
        public Bool constantUV1;
        public Bool constantColors;
    }

    public struct aiMeshSampleSummary
    {
        public Bool visibility;

        public int splitCount;
        public int submeshCount;
        public int vertexCount;
        public int indexCount;
        public Bool topologyChanged;
    }

    public struct aiMeshSplitSummary
    {
        public int submeshCount;
        public int submeshOffset;
        public int vertexCount;
        public int vertexOffset;
        public int indexCount;
        public int indexOffset;
    }

    public struct aiSubmeshSummary
    {
        public int splitIndex;
        public int submeshIndex;
        public int indexCount;
        public aiTopology topology;
    }

    public struct aiPolyMeshData
    {
        public IntPtr positions;
        public IntPtr velocities;
        public IntPtr normals;
        public IntPtr tangents;
        public IntPtr uv0;
        public IntPtr uv1;
        public IntPtr colors;
        public IntPtr indices;

        public int vertexCount;
        public int indexCount;

        public Vector3 center;
        public Vector3 extents;
    }

    public struct aiSubmeshData
    {
        public IntPtr indices;
    }

    public struct aiXformData
    {
        public Bool visibility;

        public Vector3 translation;
        public Quaternion rotation;
        public Vector3 scale;
        public Bool inherits;
    }

    public struct aiCameraData
    {
        public Bool visibility;

        public float nearClippingPlane;
        public float farClippingPlane;
        public float fieldOfView;   // in degree. vertical one
        public float aspectRatio;

        public float focusDistance; // in cm
        public float focalLength;   // in mm
        public float aperture;      // in cm. vertical one
    }

    public struct aiPointsSummary
    {
        public Bool hasVelocities;
        public Bool hasIDs;
        public Bool constantPoints;
        public Bool constantVelocities;
        public Bool constantIDs;
    };

    public struct aiPointsSampleSummary
    {
        public int count;
    }

    public struct aiPointsData
    {
        public Bool visibility;

        public IntPtr points;
        public IntPtr velocities;
        public IntPtr ids;
        public int count;

        public Vector3 boundsCenter;
        public Vector3 boundsExtents;
    }

    public struct aiPropertyData
    {
        public IntPtr data;
        public int size;
        aiPropertyType type;
    }


    public struct aiContext
    {
        public IntPtr self;
        public static implicit operator bool(aiContext v) { return v.self != IntPtr.Zero; }

        public static aiContext Create(int uid) { return aiContextCreate(uid); }
        public static void DestroyByPath(string path) { aiClearContextsWithPath(path); }

        public void Destroy() { aiContextDestroy(self); self = IntPtr.Zero; }
        public bool Load(string path) { return aiContextLoad(self, path); }
        public void SetConfig(ref aiConfig conf) { aiContextSetConfig(self, ref conf); }
        public void UpdateSamples(double time) { aiContextUpdateSamples(self, time); }

        public aiObject topObject { get { return aiContextGetTopObject(self); } }
        public int timeSamplingCount { get { return aiContextGetTimeSamplingCount(self); } }
        public aiTimeSampling GetTimeSampling(int i) { return aiContextGetTimeSampling(self, i); }
        public void GetTimeRange(ref double begin, ref double end) { aiContextGetTimeRange(self, ref begin, ref end); }

        #region internal
        [DllImport("abci")] public static extern void aiClearContextsWithPath(string path);
        [DllImport("abci")] public static extern aiContext aiContextCreate(int uid);
        [DllImport("abci")] public static extern void aiContextDestroy(IntPtr ctx);
        [DllImport("abci")] static extern Bool aiContextLoad(IntPtr ctx, string path);
        [DllImport("abci")] static extern void aiContextSetConfig(IntPtr ctx, ref aiConfig conf);
        [DllImport("abci")] static extern int aiContextGetTimeSamplingCount(IntPtr ctx);
        [DllImport("abci")] static extern aiTimeSampling aiContextGetTimeSampling(IntPtr ctx, int i);
        [DllImport("abci")] static extern void aiContextGetTimeRange(IntPtr ctx, ref double begin, ref double end);
        [DllImport("abci")] static extern aiObject aiContextGetTopObject(IntPtr ctx);
        [DllImport("abci")] static extern void aiContextUpdateSamples(IntPtr ctx, double time);
        #endregion
    }

    public struct aiTimeSampling
    {
        public IntPtr self;

        public int sampleCount { get { return aiTimeSamplingGetSampleCount(self); } }
        public double GetTime(int index) { return aiTimeSamplingGetTime(self, index); }
        public void GetRange(ref double start, ref double end) { aiTimeSamplingGetRange(self, ref start, ref end); }

        #region internal
        [DllImport("abci")] static extern int aiTimeSamplingGetSampleCount(IntPtr self);
        [DllImport("abci")] static extern double aiTimeSamplingGetTime(IntPtr self, int index);
        [DllImport("abci")] static extern void aiTimeSamplingGetRange(IntPtr self, ref double start, ref double end);
        #endregion
    }

    public struct aiObject
    {
        public IntPtr self;
        public static implicit operator bool(aiObject v) { return v.self != IntPtr.Zero; }

        public string name { get { return Marshal.PtrToStringAnsi(aiObjectGetName(self)); } }
        public string fullname { get { return Marshal.PtrToStringAnsi(aiObjectGetFullName(self)); } }
        public bool enabled { set { aiObjectSetEnabled(self, value); } }
        public int childCount { get { return aiObjectGetNumChildren(self); } }
        public aiObject GetChild(int i) { return aiObjectGetChild(self, i); }

        public aiXform AsXform() { return aiObjectAsXform(self); }
        public aiCamera AsCamera() { return aiObjectAsCamera(self); }
        public aiPoints AsPoints() { return aiObjectAsPoints(self); }
        public aiPolyMesh AsPolyMesh() { return aiObjectAsPolyMesh(self); }

        public void EachChild(Action<aiObject> act)
        {
            int n = childCount;
            for (int ci = 0; ci < n; ++ci)
                act.Invoke(GetChild(ci));
        }

        #region internal
        [DllImport("abci")] static extern int aiObjectGetNumChildren(IntPtr obj);
        [DllImport("abci")] static extern aiObject aiObjectGetChild(IntPtr obj, int i);
        [DllImport("abci")] static extern void aiObjectSetEnabled(IntPtr obj, Bool v);
        [DllImport("abci")] static extern IntPtr aiObjectGetName(IntPtr obj);
        [DllImport("abci")] static extern IntPtr aiObjectGetFullName(IntPtr obj);

        [DllImport("abci")] static extern aiXform aiObjectAsXform(IntPtr obj);
        [DllImport("abci")] static extern aiCamera aiObjectAsCamera(IntPtr obj);
        [DllImport("abci")] static extern aiPoints aiObjectAsPoints(IntPtr obj);
        [DllImport("abci")] static extern aiPolyMesh aiObjectAsPolyMesh(IntPtr obj);
        #endregion
    }

    public struct aiSchema
    {
        public IntPtr self;
        public static implicit operator bool(aiSchema v) { return v.self != IntPtr.Zero; }
        public static explicit operator aiXform(aiSchema v) { var tmp = default(aiXform); tmp.self = v.self; return tmp; }
        public static explicit operator aiCamera(aiSchema v) { var tmp = default(aiCamera); tmp.self = v.self; return tmp; }
        public static explicit operator aiPolyMesh(aiSchema v) { var tmp = default(aiPolyMesh); tmp.self = v.self; return tmp; }
        public static explicit operator aiPoints(aiSchema v) { var tmp = default(aiPoints); tmp.self = v.self; return tmp; }

        public bool isConstant { get { return aiSchemaIsConstant(self); } }
        public bool isDataUpdated { get { aiSchemaSync(self); return aiSchemaIsDataUpdated(self); } }
        public aiSample sample { get { return aiSchemaGetSample(self); } }

        public void UpdateSample(ref aiSampleSelector ss) { aiSchemaUpdateSample(self, ref ss); }
